# listenbrainz-cli-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  release-plz.yml  release.yml  release_manual.yml  rust.yml
.sqlx/: query-56e86805186e0d25f1209e34117aec2c6b7ad6af75f52cf6cc4faf839727f42b.json  query-63e59204fdb54a553cfbbfc91d250dd9953016cd77c220915857d107fbf9f63f.json  query-a887c3a8161b4c15a4c18f8192d74971969b9d38b69c84c923ce729fc913ef2a.json  query-bd022c348c1b7e45b8cbc5b206162b87703812561327d4a67979080f5e25cdab.json  query-d41cfad301c343277af32e18f944d9c22b0f93bd42d400324a2312a817b54915.json  query-dace721e5c6fd6524029d690599dd90d323e0daad3420dd6213df5c7f0ed185c.json  query-f92e49286d5024464f00b4d4578ff63baeed1e6d2ccbbbc7190d4e35a94c98c8.json
docs/: CommandLineHelp.md  start_dev.md
docs/dev/: release.md
migrations/: 20241107153207_works.sql  20241113085228_release_groups.sql  20241113133926_lbt_fix.sql
src/: main.rs  utils.rs
src/api/: mod.rs
src/api/listenbrainz/: fresh_releases.rs  global_listen_counts.rs  mod.rs
src/core/: json_querry.rs  mod.rs  radio.rs  traits.rs
src/core/caching/: disk_cache.rs  entity_cache.rs  mod.rs  musicbrainz_cache.rs  serde_cacache.rs  static_cache.rs
src/core/caching/musicbrainz/: cached_entity.rs  mod.rs  musicbrainz_cache.rs
src/core/caching/serde_cacache/: error.rs  mod.rs  tidy.rs
src/core/data_structures/: mod.rs
src/core/data_structures/table_map/: mod.rs  table_index.rs
src/core/display/: progress_bar.rs
src/core/entity_traits/: cached.rs  cached_trait.rs  config_file.rs  fetch_api.rs  fetchable.rs  get_from_cache_or_fetch.rs  has_cache.rs  has_id.rs  insert_external_entity_into_cache.rs  insertable.rs  insertable_children.rs  mb_cached.rs  mbid.rs  merge.rs  mod.rs  updatable.rs  update.rs  vec_from_vec.rs
src/core/entity_traits/mbid/: assigned_to_mbid.rs  is_cached_mbid.rs  mod.rs
src/core/entity_traits/relations/: has_artist_credits.rs  has_relationships.rs  has_release_group.rs  mod.rs
src/core/fetching/: fetch_limiter.rs  global_fetch_limiter.rs  mod.rs  musicbrainz_rate_limiter.rs
src/core/interactive/: mod.rs
src/core/statistics/: generic_statistic_holder.rs  listen_rate.rs  mod.rs  stat_sorter.rs  statistic_holder.rs  statistic_sorter.rs
src/core/user_compatibility/: builder.rs  mod.rs
src/database/: cleanup.rs  mod.rs
src/database/listenbrainz/: listens.rs  mod.rs  prefetching.rs
src/database/musicbrainz/: anniversaries.rs  mod.rs
src/datastructures/: listen_collection.rs  mod.rs  recording_with_listens.rs  release_with_listens.rs
src/datastructures/cli_formater/: mod.rs
src/datastructures/clippy/: missing_isrc.rs  missing_release_barcode.rs  missing_remix_rel.rs  missing_remixer_rel.rs  missing_work.rs  missing_work_language.rs  mod.rs  soundtrack_without_disambiguation.rs
src/datastructures/entity_with_listens/: artist_with_listens.rs  messyrecording_with_listens.rs  mod.rs  recording_with_listens.rs  release_group_with_listens.rs  release_with_listens.rs  work_with_listens.rs
src/datastructures/entity_with_listens/recording_with_listens/: collection.rs  info.rs  mod.rs  radios.rs
src/datastructures/listen_collection/: group_by.rs  mod.rs  traits.rs
src/datastructures/radio/: collector.rs  mod.rs
src/datastructures/radio/filters/: cooldown.rs  min_listens.rs  mod.rs  timeouts.rs
src/datastructures/radio/seeders/: listens.rs  mod.rs
src/datastructures/radio/sorters/: listen_rate.rs  mod.rs  overdue.rs  underrated.rs
src/error/: mod.rs  tracable_error.rs
src/models/: clippy.rs  error.rs  messy_recording.rs  mod.rs  playlist_stub.rs
src/models/api/: mod.rs
src/models/api/listenbrainz/: mod.rs  user_listens.rs
src/models/api/musicbrainz/: artist.rs  artist_credit.rs  mod.rs  recording.rs
src/models/cache/: artist_cache.rs  cached_trait.rs  disk_cache.rs  global_cache.rs  listen_caching.rs  mod.rs  recording_cache.rs  static_cache.rs
src/models/cache/listen_cache/: cache.rs  mod.rs
src/models/cache/musicbrainz/: release.rs
src/models/cache/traits/: has_cache.rs  mod.rs  uncached.rs
src/models/cli/: common.rs  config.rs  listens.rs  mod.rs  radio.rs  stats.rs  unmapped.rs
src/models/cli/cache/: load_listen_dump.rs  mod.rs
src/models/clippy/: lint_severity.rs  mod.rs
src/models/config/: bumps.rs  config_guard.rs  config_trait.rs  global_config.rs  listen_config.rs  mapper.rs  mod.rs  recording_timeout.rs  self_edits.rs  whitelisted_wrong_mappings.rs
src/models/data/: data_store.rs  entity_database.rs  mod.rs  musicbrainz_database.rs  musicbrainz_database_legacy.rs  recording.rs
src/models/musicbrainz/: mod.rs
src/models/radio/: mod.rs
src/models/stats/: artist_stats.rs  generic_statistic_holder.rs  mod.rs  recording_stats.rs  stat_struct.rs
src/testing/fixtures/: user_listens.rs
src/tools/: bumps.rs  cache.rs  daily.rs  interactive_mapper.rs  mod.rs
src/tools/clippy/: mod.rs
src/tools/compatibility/: mod.rs  user_compatibility.rs
src/tools/interactive_mapper/: mod.rs
src/tools/listens/: import.rs  mapper.rs  mod.rs  remap.rs  unlinked.rs
src/tools/lookup/: mod.rs  recording.rs
src/tools/musicbrainz/: clippy.rs  mod.rs  search_link.rs
src/tools/radio/: circles.rs  listen_rate.rs  mod.rs  overdue.rs  underrated.rs
src/tools/stats/: artists.rs  mod.rs  recordings.rs  release_groups.rs  releases.rs  work.rs
src/tools/unlinked/: mod.rs
src/tools/unstable/: best_of.rs  mod.rs
src/tools/wrong_link/: mod.rs
src/utils/: cli_paging.rs  env.rs  logger.rs  mod.rs  streams.rs  whitelist_blacklist.rs
src/utils/cli/: constants.rs  display.rs  global_progress_bar.rs  mod.rs  parsing.rs  prompt.rs
src/utils/extensions/: db_lite_ext.rs  hashmap_ext.rs  listenbrainz_ext.rs  mod.rs  musicbrainz.rs  musicbrainz_ext.rs  owo_colors_ext.rs  serde_ext.rs
src/utils/listenbrainz_api/: mod.rs
src/utils/playlist/: mod.rs
src/utils/regex/: mod.rs
src/utils/tracing/: mod.rs
src/utils/traits/: mod.rs
tests/: tests.rs
(+204 files in other folders)
